# sipeed-cm5-fancontrol

./: .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  cm5fan.service  deploy-full.sh  fan_control.py  pyproject.toml  requirements-dev.txt  run_tests.py  setup-hooks.sh  test_url_logic.py
.githooks/: pre-commit
.github/workflows/: ci.yml
deploy-kubernetes/: Dockerfile  Dockerfile.exporter  README.md  install.sh  k8s_discovery.py  k8s_discovery_README.md
deploy-kubernetes/helm/: Chart.yaml  README.md  values.yaml
deploy-kubernetes/helm/templates/: NOTES.txt  _helpers.tpl  controller-configmap.yaml  controller-daemonset.yaml  controller-role.yaml  controller-rolebinding.yaml  controller-service.yaml  controller-serviceaccount.yaml  exporter-daemonset.yaml  exporter-service.yaml
deploy-kubernetes/helm/tests/: test-values.yaml
deploy-monitoring/: README.md  install.sh
deploy-monitoring/helm/: Chart.yaml  values.yaml
deploy-monitoring/helm/templates/: NOTES.txt  grafana-dashboard-enhanced.yaml  grafana-dashboard-system.yaml  grafana-dashboard-temperatures.yaml  grafana-dashboard.yaml  grafana-dashboards-config.yaml  grafana-datasources-configmap.yaml  grafana-deployment.yaml  grafana-pvc.yaml  grafana-service.yaml  prometheus-clusterrole.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-pvc.yaml  prometheus-service.yaml  prometheus-serviceaccount.yaml
deploy-systemd/: README.md  fan_control.conf  fan_control.py  fanctl  install.sh  requirements.txt  sipeed-cm5-fancontrol.service  sipeed-temp-exporter.service  temp_exporter.py  uninstall.sh
deploy-systemd/cli/: cm5fan
deploy-systemd/tests/: test_dummy_gpio.py  test_fan_controller.py  test_fan_curves.py  test_integration.py  test_mapping.py  test_min_operating_speed.py  test_remote_polling.py  test_temp_exporter.py  test_temp_reading.py
tests/: test_mapping.py  test_url_logic.py
