[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sipeed-cm5-fancontrol"
version = "0.2.0"
description = "Fan controller for Sipeed CM5 modules with systemd and Kubernetes support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Michael Kuppinger", email = "michael@kuppinger.eu"}
]
keywords = ["raspberry-pi", "fan-control", "temperature-monitoring", "sipeed", "cm5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "RPi.GPIO>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Mi-Q/sipeed-cm5-fancontrol"
Repository = "https://github.com/Mi-Q/sipeed-cm5-fancontrol"
Issues = "https://github.com/Mi-Q/sipeed-cm5-fancontrol/issues"
Changelog = "https://github.com/Mi-Q/sipeed-cm5-fancontrol/blob/main/CHANGELOG.md"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
    "deploy-systemd/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--cov=deploy-systemd",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["deploy-systemd"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

